--- a/index.html
+++ b/index.html
@@ -143,11 +143,13 @@
     </main>
     <!-- !ПОДВАЛ -->
     <footer>
-      <a href=""><span>Web</span>Studio</a>
+      <a href="" lang="en"><span>Web</span>Studio</a>
       <address>
-        г. Киев, пр-т Леси Украинки, 26 <br />
-        <a href="info@example.com">info@example.com</a> <br />
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <ul>
+          <li>г. Киев, пр-т Леси Украинки, 26</li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
