--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- !ШАПКА -->
     <header>
       <nav>
-        <a href=""><span>Web</span>Studio</a>
+        <a href="" lang="en"><span>Web</span>Studio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -19,7 +19,7 @@
         </ul>
       </nav>
       <div>
-        <a href="info@devstudio.com">info@devstudio.com</a>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380961111111">+38 096 111 11 11</a>
       </div>
     </header>
